--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HydroNFC</title>
+    <title>HydroNFC - 智能飲水提醒</title>
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/3100/3100566.png">
     <meta name="theme-color" content="#3b82f6">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; }
+        body { 
+            font-family: 'Inter', sans-serif; 
+            -webkit-tap-highlight-color: transparent;
+        }
         .water-wave {
             background: linear-gradient(180deg, #3b82f6 0%, #1d4ed8 100%);
             transition: height 0.5s ease-in-out;
@@ -31,13 +37,14 @@
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
     <script>
+      // 更穩健的 Service Worker 註冊邏輯
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./sw.js').then(reg => {
-            console.log('SW registered:', reg);
-          }).catch(err => {
-            console.log('SW registration failed:', err);
-          });
+          // 使用相對根路徑，確保在 Vercel 或 GitHub Pages 子路徑下能運作
+          const swPath = './sw.js'; 
+          navigator.serviceWorker.register(swPath)
+            .then(reg => console.log('ServiceWorker 註冊成功，範圍:', reg.scope))
+            .catch(err => console.error('ServiceWorker 註冊失敗:', err));
         });
       }
     </script>
