--- a/index.html
+++ b/index.html
@@ -37,14 +37,30 @@
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
     <script>
-      // 更穩健的 Service Worker 註冊邏輯
+      // Enhanced Service Worker Registration
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          // 使用相對根路徑，確保在 Vercel 或 GitHub Pages 子路徑下能運作
-          const swPath = './sw.js'; 
-          navigator.serviceWorker.register(swPath)
-            .then(reg => console.log('ServiceWorker 註冊成功，範圍:', reg.scope))
-            .catch(err => console.error('ServiceWorker 註冊失敗:', err));
+          // Construct the SW path relative to the current location's folder
+          const swUrl = new URL('sw.js', window.location.href);
+          
+          // Service Workers MUST be on the same origin. 
+          // If the environment is proxying from ai.studio to a sandbox domain,
+          // we only register if the origins match to avoid the security error.
+          if (swUrl.origin === window.location.origin) {
+            navigator.serviceWorker.register(swUrl.pathname)
+              .then(reg => {
+                console.log('ServiceWorker registered successfully. Scope:', reg.scope);
+              })
+              .catch(err => {
+                console.error('ServiceWorker registration failed:', err);
+              });
+          } else {
+            console.warn(
+              'ServiceWorker registration skipped due to origin mismatch.\n' +
+              'Page Origin: ' + window.location.origin + '\n' +
+              'Worker Origin: ' + swUrl.origin
+            );
+          }
         });
       }
     </script>
